# fast-fst

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: dict_bench.rs
src/: lib.rs  main.rs  test.rs
