[package]
name = "fast-fst"
version = "0.1.0"
edition = "2024"

[dependencies]
fst = { version = "0.4.7" }
levenshtein_automata = { version = "0.2.1", features = ["fst"] }
memmap2 = "0.9.10"
rayon = "1.12.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"

[[bench]]
name = "dict_bench"
harness = false
